tests/baselines/reference/arrayIndexWithArrayFails.errors.txt
arrayIndexWithArrayFails.ts(3,16): error TS2538: Type 'string[]' cannot be used as an index type.


==== arrayIndexWithArrayFails.ts (1 errors) ====
    declare const arr1: (string | string[])[];
    declare const arr2: number[];
    const j = arr2[arr1[0]]; // should error
                   ~~~~~~~
!!! error TS2538: Type 'string[]' cannot be used as an index type.